<resources>
    <string name="app_name">Belajar2021</string>
    <string name="file_new">File New</string>
    <string name="file_open">File Open</string>
    <string name="file_save">File Save</string>
    <string name="title">Title</string>
    <string name="save_and_open_ButtonTitle">Save and Open</string>
    <string name="save_data_buttonTitle">Save Data</string>

    //string Menyimpan Data
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">No Handphone</string>
    <string name="age">Age</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="save">Simpan</string>
    <string name="love_manchester_united">Suka manchester united?</string>
    <string name="change">Ubah</string>
    <string name="dummy_name">Narenda Wicaksono</string>
    <string name="dummy_email">narenda@dicoding.com</string>
    <string name="dummynumber">123456</string>
    <string name="dummyage">30</string>
    <string name="dummyislove">IsLoveMU</string>
    <string name="setting">Setting</string>

    //String Setting
    <string name="nothing">Tidak Ada</string>
    <string name="key_email">email</string>
    <string name="key_age">age</string>
    <string name="key_phone">phone</string>
    <string name="key_love">love</string>
    <string name="key_name">name</string>
    <string name="is_love">Suka Manchester United</string>
</resources>