<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveOpen.open_save_activity"
    android:padding="16dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/edit_file"
        style="@style/Widget.AppCompat.EditText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header_linear"
        android:background="@android:color/white"
        android:gravity="top|start"
        android:inputType="textMultiLine|textNoSuggestions"
        android:padding="@dimen/tiny_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header_linear"
        android:gravity="center_horizontal|start"
        android:orientation="horizontal">
        <Button
            android:layout_width="72dp"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_new"
            android:text="@string/file_new"
            android:layout_marginBottom="@dimen/tiny_margin"/>

        <Button
            android:layout_width="72dp"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_open"
            android:text="@string/file_open"
            android:layout_marginBottom="@dimen/tiny_margin"
            android:layout_marginStart="@dimen/tiny_margin"/>

        <Button
            android:layout_width="72dp"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_save"
            android:text="@string/file_save"
            android:layout_marginBottom="@dimen/tiny_margin"
            android:layout_marginStart="@dimen/tiny_margin"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/edit_title"
            android:layout_marginBottom="@dimen/tiny_margin"
            android:layout_marginStart="@dimen/tiny_margin"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName|textNoSuggestions"
            android:padding="@dimen/tiny_margin"
            android:importantForAutofill="no" />
    </LinearLayout>

</RelativeLayout>